// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notes delete note w/children 1`] = `
Array [
  "foo.ch1.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`notes query query child note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "links": Array [],
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-16138-AXuiiP7jfRth/vault",
      },
    },
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "links": Array [],
      "parent": "44318bfd-ae0e-44c4-8e10-c896fffbb2f7",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-16138-AXuiiP7jfRth/vault",
      },
    },
  ],
  "error": null,
}
`;

exports[`notes query query root note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "links": Array [],
      "parent": "0ad865ba-f5e0-4077-af47-4634fbfb3792",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-16138-SlPAqh33OJet/vault",
      },
    },
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "links": Array [],
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-16138-SlPAqh33OJet/vault",
      },
    },
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "0ad865ba-f5e0-4077-af47-4634fbfb3792",
      "links": Array [],
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-16138-SlPAqh33OJet/vault",
      },
    },
  ],
  "error": null,
}
`;

exports[`notes query query root: root note 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "49cfa2be-9135-4382-970d-9c50ff280027",
      "links": Array [],
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-16138-YmX19zLBX5GD/vault",
      },
    },
  ],
  "error": null,
}
`;

exports[`notes rename/ basic 1`] = `
Object {
  "data": Array [
    Object {
      "note": Object {
        "body": "[[baz]]

",
        "children": Array [],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "bar",
        "id": "bar",
        "links": Array [
          Object {
            "alias": "baz",
            "from": Object {
              "fname": "bar",
              "id": "bar",
            },
            "original": "baz",
            "pos": Object {
              "end": 7,
              "start": 0,
            },
            "to": Object {
              "fname": "baz",
            },
            "type": "wiki",
            "value": "baz",
          },
        ],
        "parent": "d57e2c57-1921-483b-9e80-d15ad6d1cb19",
        "title": "Bar",
        "type": "note",
        "updated": "1",
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-16138-PRcvA256UI0k/vault",
        },
      },
      "status": "update",
    },
    Object {
      "note": Object {
        "body": "[[bar]]
",
        "children": Array [],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "foo",
        "id": "foo",
        "links": Array [],
        "parent": null,
        "title": "Foo",
        "type": "note",
        "updated": "1",
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-16138-PRcvA256UI0k/vault",
        },
      },
      "status": "delete",
    },
    Object {
      "note": Object {
        "body": "[[bar]]
",
        "children": Array [],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "baz",
        "id": "foo",
        "links": Array [],
        "parent": "d57e2c57-1921-483b-9e80-d15ad6d1cb19",
        "title": "Foo",
        "type": "note",
        "updated": "1",
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-16138-PRcvA256UI0k/vault",
        },
      },
      "status": "create",
    },
  ],
  "error": null,
}
`;

exports[`notes rename/ basic 2`] = `
Array [
  "bar.md",
  "baz.md",
  "foo.ch1.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`notes rename/ domain with no children, update exsiting node: changed 1`] = `
Array [
  Object {
    "note": Object {
      "body": "[[gamma]]

",
      "children": Array [],
      "created": "1",
      "data": Object {},
      "desc": "",
      "fname": "alpha",
      "id": "alpha",
      "links": Array [
        Object {
          "alias": "gamma",
          "from": Object {
            "fname": "alpha",
            "id": "alpha",
          },
          "original": "gamma",
          "pos": Object {
            "end": 9,
            "start": 0,
          },
          "to": Object {
            "fname": "gamma",
          },
          "type": "wiki",
          "value": "gamma",
        },
      ],
      "parent": "50eda9b2-454a-45fa-a74c-58b6e81ee21d",
      "title": "Alpha",
      "type": "note",
      "updated": "1",
    },
    "status": "update",
  },
  Object {
    "note": Object {
      "body": "[[alpha]]
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "beta",
      "id": "beta",
      "links": Array [],
      "parent": null,
      "title": "Beta",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-16138-36dorq5y5LvD/vault",
      },
    },
    "status": "delete",
  },
  Object {
    "note": Object {
      "body": "[[alpha]]
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "gamma",
      "id": "beta",
      "links": Array [],
      "parent": "50eda9b2-454a-45fa-a74c-58b6e81ee21d",
      "title": "Beta",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-16138-36dorq5y5LvD/vault",
      },
    },
    "status": "create",
  },
]
`;

exports[`schema write simple schema 1`] = `
"version: 1
imports: []
schemas:
  - id: pro
    children: []
    title: pro
    parent: root
"
`;
